Fix the script somewhat